syntax = "proto3";

package persistence_sdk.modules.classifications.internal.key;

import "gogoproto/gogo.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/classifications/internal/key";

message ClassificationID {
  option (gogoproto.goproto_stringer) = false;

  string chain_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false];
  string hash_i_d = 2 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false];
}
